infra/policy/nginx-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  labels:
    app: nginx-test
spec:
  containers:
  - name: nginx
    image: us-west1-docker.pkg.dev/clgcporg10-172/security-demo-docker/nginx@sha256:f15190cd0aed34df2541e6a569d349858dd83fe2a519d7c0ec023133b6d3c4f7
    ports:
    - containerPort: 80
